Agregado de Aviones

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <img src="./img/tren7.jpg" alt="">
         <img src="./img/tren8.jpg" alt="">
         <img src="./img/tren9.jpg" alt="">
+        <img src="./img/avion1.jpg" alt="">
+        <img src="./img/avion5.jpg" alt="">
+        <img src="./img/avion7.jpg" alt="">
     </picture>
 </body>
 </html>
